--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,68 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
+:root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 400;
+  background-color: #242424;
+}
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+.container {
+  min-width: 320px;
+  max-width: 375px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+.main-wrapper {
+  list-style: none;
+  width: fit-content;
+}
+
+.main-item {
+  border: 2px solid mediumaquamarine;
+  border-radius: 20px;
+  text-align: center;
+  background: transparent;
+}
+
+.main-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.main-link {
+  display: inline-block;
+  padding: 12px;
+  font-size: 24px;
+  background: transparent;
+  color: #3d3db8;
+  text-decoration: none;
+}
+
+.main-item:hover {
+  box-shadow: 0 0 20px 5px mediumaquamarine, inset 0 0 10px 3px mediumaquamarine;
+}
+
+.main-item:hover>.main-link {
+  animation: pulse 750ms infinite linear;
+  color: #82a1ff;
+}
+
+@keyframes pulse {
+  25% {
+    transform: scale(97%);
+  }
+
+  75% {
+    transform: scale(102%);
+  }
+
+}
